# novel-client-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: poetry.yml  ruff.yml
novel-client-py/: client.py  novelexception.py
novel_client_py/: __init__.py  client.py  novelmodels.py
tests/: test_status.py
