[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "novel-client-py"
version = "0.1.0"
description = "A python client for the novel API"
authors = ["Matthew Raaff <matthew@raaff.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1" # Currently required, but requests will become an option in the future

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
novel-client-py = "novel_client_py:main"

[tool.poetry.plugins.poetry-plugin]
version = "^1.0"

[tool.poetry.plugins.poetry-python]
version = "^1.0"

[tool.poetry.plugins.poetry-publish]
version = "^1.0"

[tool.poetry.plugins.poetry-unlock]
version = "^1.0"

[tool.pytest]
testpaths = ["tests"]
